--- a/EngineBay.RateLimiting/EngineBay.RateLimiting.csproj
+++ b/EngineBay.RateLimiting/EngineBay.RateLimiting.csproj
@@ -2,18 +2,18 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <RootNamespace>EngineBay.ModuleTemplate</RootNamespace>
+        <RootNamespace>EngineBay.RateLimiting</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <PackageId>EngineBay.ModuleTemplate</PackageId>
-        <Version>0.0.0</Version>
+        <PackageId>EngineBay.RateLimiting</PackageId>
+        <Version>0.0.0-pre</Version>
         <Authors>EngineBay</Authors>
         <Company>EngineBay</Company>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-        <PackageProjectUrl>https://github.com/engine-bay/module-template</PackageProjectUrl>
-        <RepositoryUrl>https://github.com/engine-bay/module-template</RepositoryUrl>
+        <PackageProjectUrl>https://github.com/engine-bay/rate-limiting</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/engine-bay/rate-limiting</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <TargetType>library</TargetType>
         <IsPackable>true</IsPackable>
@@ -41,10 +41,12 @@
     </Choose>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.RateLimiting" Version="7.0.0-rc.2.22476.2" />
         <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="System.Threading.RateLimiting" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
